# Eurobot2023_ws

./: .gitignore  .gitmodules  81-vive.rules  README.md  frames.gv  rename_RPI_USB_ports.sh
src/eurobot/: CMakeLists.txt
src/eurobot/params/: imu_calib_3.yaml  imu_calib_big_ourtable.yaml
src/eurobot/src/: nlink_tagframe_converter.cpp
src/eurobot_localization/config/: ekf_dit_new.yaml
src/eurobot_localization/include/: ekf.h
src/eurobot_localization/launch/: ekf_fullstate_new.launch  ekf_uwb.launch
src/eurobot_localization/src/: ekf.cpp
src/imu_calib/: CMakeLists.txt  package.xml
src/imu_calib/launch/: imu_calib.launch
src/imu_calib/scripts/: mag_calib.py
src/imu_ros_driver/: package.xml
src/imu_ros_driver/scripts/: calibrate_compass  mag_calib.yaml
src/imu_ros_driver/src/: mpu9250.py
src/localization/eurobot/: package.xml
src/localization/imu_calib/: CMakeLists.txt
src/localization/imu_ros_driver/: CMakeLists.txt
src/localization/vive/: CMakeLists.txt
src/robot_navigation/: CMakeLists.txt
src/robot_navigation/include/: pathTracker.h
src/robot_navigation/launch/: drive_global.launch  ideal.launch  run.launch  serial_dp.launch
src/robot_navigation/params/: costmap_common_params.yaml  local_costmap_param.yaml  pathTracker.yaml  pathTracker_purple.yaml  pathTracker_yellow.yaml
src/robot_navigation/rviz/: drive_global.rviz  ideal.rviz
src/robot_navigation/src/: pathTracker.cpp  pathTracker_main.cpp
src/vive/: CMakeLists.txt  package.xml
src/vive/include/: lighthouse_tf.h  lighthouse_tf_plus.h
src/vive/launch/: vive.launch
src/vive/param/: lighthouse_config.yaml
src/vive/rviz/: show_tf.rviz
src/vive/src/: api_example.cpp  lighthouse_tf.cpp  lighthouse_tf_plus.cpp  ros_tools_maincc.cpp  (+4 more)
src/vive_tracker_ros_package/: CMakeLists.txt  package.xml
src/vive_tracker_ros_package/src/: vive_tracker_node.cpp
(+42 files in other folders)
