<?xml version="1.0"?>
<package format="2">
  <name>vive_tracker_ros_package</name>
  <version>0.0.0</version>
  <description>vive_tracker_ros_package</description>
  <maintainer email="jing@todo.todo">guanlunlu</maintainer>
  <license>TODO</license>

  <!-- <depend package="roscpp"/>
  <depend package="rospy"/>
  <depend package="std_msgs"/>
  <depend package="tf2"/>
  <depend package="tf2_ros"/> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  
  </export>

</package>
